made sure that submission of new essay questions and new subquesions worked correctly and was visible when a use tried to view said questions

--- a/myQBank/static/myQBank/allCSS.css
+++ b/myQBank/static/myQBank/allCSS.css
@@ -20,3 +20,6 @@
 .margin-giver2 {
     margin-top: 0.25rem;
 }
+.centering {
+    text-align: center;
+}
